<resources>
    <string name="app_name">My Application - Test</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="about_us">About us</string>
    <string name="contact">Contact</string>
    <string name="share">Share</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_about_us_fragment">Hello about us fragment!</string>
    <string name="hello_contact_fragment">Hello contact fragment!</string>
    <string name="hello_share_fragment">Hello share fragment!</string>
    <string name="please_add_your_password">Please add your password!</string>
    <string name="sign_up">SIGN UP</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="first_time_here">First time here?</string>
    <string name="login">LOGIN</string>
    <string name="please_add_your_email_address">Please add your email address!</string>
    <string name="sign_in">SIGN IN</string>
    <string name="change_password">CHANGE PASSWORD</string>
    <string name="please_re_type_your_old_password">Please re-type your old password!</string>
    <string name="please_type_your_old_password">Please type your old password!</string>
    <string name="please_type_your_new_password">Please type your new password!</string>
    <string name="reset_password">Reset password!</string>
    <string name="please_re_type_your_new_password">Please re-type your new password!</string>
    <string name="register">REGISTER</string>
    <string name="please_add_your_username">Please add your username!</string>
    <string name="please_re_type_your_password">Please re-type your password!</string>
    <string name="add_a_trip">Add a trip!</string>
    <string name="trip_name">Trip Name</string>
    <string name="destination">Destination</string>
    <string name="city_break">City break</string>
    <string name="sea_side">Sea side</string>
    <string name="mountains">Mountains</string>
    <string name="price_in_eur">Price in EUR</string>
    <string name="please_add_the_arriving_date">PLEASE ADD THE ARRIVING DATE</string>
    <string name="please_add_the_leaving_date">Please add the leaving date!</string>
    <string name="please_add_the_leaving_date_loew">Please add the leaving date</string>
    <string name="please_select_an_image">Please select an image!</string>
    <string name="save">SAVE</string>
    <string name="contact_caps">CONTACT</string>
    <string name="contact_text">If you have questions about the services offered by Travel Buddy we would like to invite you to send us an email using the form below.</string>
    <string name="problems">Problems</string>
    <string name="options">Options</string>
    <string name="text">Text</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="send">SEND</string>
    <string name="about_us_caps">ABOUT US</string>
    <string name="text_about_us">TravelBuddy, the world\'s largest travel platform, helps hundreds of persons to save the places they visited and makes life easier for them in just a few clicks. As a travel company available in 43 markets and 22 languages, TravelBuddy makes remembering places easy no matter how long in the past you\'ve been gone.</string>
    <string name="our_team">OUR TEAM</string>
    <string name="text_serban"><![CDATA[PRESIDENT & CEO \nTiurbe Serban is President and CEO of Travel Buddy. Serban has more than 5 years\' leadership experience across a diversity of sectors, including travel, digital media, e-commerce and data.]]></string>
    <string name="john_boris">CHIEF MARKETING OFFICER\nJohn Boris leads TravelBuddy\'s global marketing organization, inclusive of customer acquisition and engagement, performance and brand marketing.</string>
    <string name="seth_kalvert">CHIEF LEGAL OFFICER\nSeth Kalvert has responsibility for all the legal activities of TravelBuddy. Prior to assuming his role as General Counsel in August 2011, Seth held various positions, most recently as Vice President.</string>
    <string name="arriving_date">Please add the arriving date!</string>
    <string name="find_us_on">Find us on:</string>
    <string name="_destination">-Destination-</string>
    <string name="price">Price</string>
    <string name="rating">Rating</string>
    <string name="no_trips">No trips!</string>
    <string name="your_trips">Your trips!</string>
    <string name="edit_trip">EDIT TRIP</string>
    <string name="degrees">Degrees:</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="arriving_date_">Arriving date</string>
    <string name="leaving_date">Leaving date</string>
    <string name="your_trips_">Your trips</string>
    <string name="insert_your_message">Insert your message!</string>
    <string name="share_">SHARE</string>
    <string name="denardtext">Denard Laza is a highly respected figure in the business world, currently serving as the Vice CEO of his company. His journey to this prestigious position is a testament to his skill, dedication, and unique perspective on business dynamics.</string>
    <string name="yourtrips">Your Trips</string>
    <string name="string_">SHARE</string>
    <string name="leave_date">Please add the leaving date!</string>
    <string-array name="stringsList">
        <item>"General question"</item>
        <item>"Registration difficulties"</item>
        <item>"Unable to recover password"</item>
    </string-array>
    >
</resources>