<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient1"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient1"
        tools:context=".fragments.AboutUsFragment">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="20dp"
            android:text="@string/about_us_caps"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="35sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginStart="8dp"
            android:background="#30ffffff"
            android:gravity="center_horizontal|center"
            android:padding="20dp"
            android:text="@string/text_about_us"

            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="20dp"
            android:text="@string/our_team"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="35sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.65"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="400dp"
            android:layout_height="220dp"
            android:layout_margin="10dp"
            android:drawableStart="@drawable/eu"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/text_serban"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.357"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView69"
            android:layout_width="243dp"
            android:layout_height="152dp"
            android:layout_margin="100dp"
            android:layout_marginTop="244dp"
            android:drawableStart="@drawable/denardregele"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/denardtext"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.267"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="400dp"
            android:layout_height="220dp"
            android:drawableStart="@drawable/skalve"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/seth_kalvert"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.357"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:height="220dp"
            android:drawableStart="@drawable/resize"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/john_boris"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.372"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/find_us_on"
            android:textAlignment="center"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8">


            <ImageView
                android:id="@+id/googleIcon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="20dp"
                android:src="@drawable/googleicon" />

            <ImageView
                android:id="@+id/facebookIcon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="20dp"
                android:src="@drawable/facebookicon" />

            <ImageView
                android:id="@+id/twitterIcon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="20dp"
                android:src="@drawable/twitter" />
        </LinearLayout>
        >

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>